tests/ctu/pass/call.ct
@entry
def main(i: int): bool {
    if i == 100 {
        return true;
    }

    return main(0b1000110101001) == main(i);
}
