tests/ctu/fail/type-in-expr.ct
def test(): bool {
    var i = 0;
    return i > int;
}
